docs: update with questionType information
